# ai-video-editor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  claude_desktop_config.example.json  config.default.yml  pyproject.toml
src/: __init__.py  cli.py  config.py  mcp_server.py  pipeline.py
src/steps/: __init__.py  assemble.py  chapters.py  color_grade.py  detect_speech.py  edit_decisions.py  encode.py  enhance_audio.py  extract_audio.py  jump_cuts.py  smart_hook.py  transcribe.py
src/utils/: __init__.py  face_detect.py  ffmpeg.py  json_output.py  openrouter.py
tests/: __init__.py  test_config.py  test_edit_decisions.py
tests/reports/2026-02-24/: test-report-smart-hook-xfade-fix.md
tests/reports/2026-02-25/: test-report-cut-cut-fix-zoom-removal.md
